# src/api/user/application/port/user.usecase.port.ts
@@ -2,8 +2,7 @@ import { User } from '@USER/domain';
 
 export namespace IUserUsecase {
   export type FindOne = Pick<User.State, 'id'>;
-  export type Create = Pick<User.State, 'username' | 'password'> &
-    Pick<User.State, 'email'>;
+  export type Create = Pick<User.State, 'email' | 'username' | 'password'>;
   export type Update = Partial<Pick<User.State, 'username'>> &
     Pick<User.MetadataVO, 'bio' | 'birth' | 'phone'>;
 }
